fixed the room and lobby css overflow

--- a/css/network.css
+++ b/css/network.css
@@ -30,8 +30,7 @@
 	overflow-y:scroll;
 	margin-bottom: 20px;
 	padding: 0;
-	min-height: 400px;
-	max-height: 400px;
+	max-height: 325px;
 }
 
 #lobby-list::-webkit-scrollbar {
@@ -78,8 +77,7 @@
 	overflow-y:scroll;
 	margin-bottom: 20px;
 	padding: 0;
-	min-height: 400px;
-	max-height: 400px;
+	max-height: 325px;
 }
 
 #room-list::-webkit-scrollbar {
